@startuml Sistema de votação
class Candidato
{
    tipoCandidato : int;
    situacao : int;
    numeroCandidato : int;
    nome : String;
    numeroFederacao : int;
    dataNascimento : Date;
    situacaoEleito : int;
    genero : int;
    votos=0 : int;
    partido : Partido;
}
class Partido
{
    candidatos : LinkedList<Candidato>;
    sigla : String;
    numero : int;
    votosLegenda=0 : int;
}

class Leitor
{
    path : String;
    is : InputStream;
    isr : InputStreamReader;
    br : BufferedReader;
    partidos : LinkedList<Partido>;
    candidatosVotoLegenda : LinkedList<Candidato>;
}
class Processamento
{
    candidatos : HashMap<Integer, Candidato>;
    candidatosList : LinkedList <Candidato>;
    candidatosEleitos : LinkedList <Candidato>;
    partidos : LinkedList <Partido> ;
    tipoEleicao : int;
    dataEleicao : Date;
}
Partido "0, 1   " <--|> "0 ...  n   " Candidato : possui >
Leitor -> "0 ... n" Partido : possui >
App --> Leitor : ler >
App -> Processamento : processar >
class App
{
    public static void main(String[] args)
}
@enduml